--- a/css/style.css
+++ b/css/style.css
@@ -166,6 +166,12 @@
 .napravio span{
     color: red;
 }
+
+.face{
+    padding-left: 10px;
+    padding-top: 10px;
+    margin: 20px;
+}
 /* ----- FOOTER KRAJ ----- */
 
 
